--- a/StewardClient/src/app/pages/tools/pages/welcome-center-tiles/steelhead/tile-components/steelhead-general-tile.component.html
+++ b/StewardClient/src/app/pages/tools/pages/welcome-center-tiles/steelhead/tile-components/steelhead-general-tile.component.html
@@ -42,5 +42,88 @@
         </mat-option>
       </mat-select>
     </mat-form-field>
+    <mat-form-field class="sf-default-hint" appearance="fill">
+      <mat-label>Timer</mat-label>
+      <mat-select [formControl]="formControls.timerInstance">
+        <mat-option *ngFor="let item of timerInstanceEnum | keyvalue" [value]="item.value">
+          {{ item.key }}
+        </mat-option>
+      </mat-select>
+      <button
+        matSuffix
+        mat-icon-button
+        clickStop
+        (click)="removeTimerInstance()"
+        [disabled]="formControls.timerInstance.disabled"
+        matTooltip="Clear timer type"
+      >
+        <mat-icon>close</mat-icon>
+      </button>
+    </mat-form-field>
+    <ng-container *ngIf="formControls.timerInstance.value">
+      <mat-form-field
+        *ngIf="selectedTimerReferenceInstance"
+        class="sf-default-hint"
+        appearance="fill"
+      >
+        <mat-label>Select {{ selectedTimerReferenceInstance }}</mat-label>
+        <mat-select [formControl]="formControls.timerReferenceId">
+          <mat-option
+            *ngFor="let referenceOption of timerReferenceOptions | keyvalue"
+            [value]="referenceOption.key"
+          >
+            {{ referenceOption.value | humanize }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <ng-container *ngIf="!selectedTimerReferenceInstance">
+        <div class="sf-horizontal">
+          <mat-form-field class="sf-default-hint sf-simple-date" appearance="fill">
+            <mat-label>Start Date (mm/dd/yyyy)</mat-label>
+            <input
+              matInput
+              [matDatepicker]="fromPicker"
+              [formControl]="formControls.timerCustomFromDate"
+            />
+            <mat-datepicker-toggle matSuffix [for]="fromPicker"></mat-datepicker-toggle>
+            <mat-datepicker #fromPicker></mat-datepicker>
+          </mat-form-field>
+          <mat-form-field class="sf-default-hint sf-simple-date" appearance="fill">
+            <mat-label>End Date (mm/dd/yyyy)</mat-label>
+            <input
+              matInput
+              [matDatepicker]="toPicker"
+              [formControl]="formControls.timerCustomToDate"
+            />
+            <mat-datepicker-toggle matSuffix [for]="toPicker"></mat-datepicker-toggle>
+            <mat-datepicker #toPicker></mat-datepicker>
+          </mat-form-field>
+        </div>
+      </ng-container>
+
+      <select-localized-string
+        [service]="localizationSelectServiceContract"
+        [formControl]="formControls.timerLocalizedStartTextOverride"
+        label="Timer Start Text Override"
+        hintMessage="Optional"
+        formControlName="timerLocalizedStartTextOverride"
+      ></select-localized-string>
+      <select-localized-string
+        [service]="localizationSelectServiceContract"
+        [formControl]="formControls.timerLocalizedEndTextOverride"
+        label="Timer End Text Override"
+        hintMessage="Optional"
+        formControlName="timerLocalizedEndTextOverride"
+      ></select-localized-string>
+      <mat-form-field class="sf-default-hint" appearance="fill">
+        <mat-label>Timer Type</mat-label>
+        <mat-select [formControl]="formControls.timerType">
+          <mat-option *ngFor="let item of timerTypeEnum | keyvalue" [value]="item.value">
+            {{ item.key }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </ng-container>
   </div>
 </form>
