--- a/StewardClient/src/app/pages/tools/pages/welcome-center-tiles/steelhead/tile-components/steelhead-general-tile.component.html
+++ b/StewardClient/src/app/pages/tools/pages/welcome-center-tiles/steelhead/tile-components/steelhead-general-tile.component.html
@@ -61,6 +61,7 @@
       </button>
     </mat-form-field>
     <ng-container *ngIf="formControls.timerInstance.value">
+      <!-- Show a reference dropdown if needed (Every timer instance except Custom) -->
       <mat-form-field
         *ngIf="selectedTimerReferenceInstance"
         class="sf-default-hint"
@@ -77,6 +78,7 @@
         </mat-select>
       </mat-form-field>
 
+      <!-- If timer instance is not a reference show field for Custom Instance -->
       <ng-container *ngIf="!selectedTimerReferenceInstance">
         <div class="sf-horizontal">
           <mat-form-field class="sf-default-hint sf-simple-date" appearance="fill">
