--- a/StewardClient/src/app/shared/views/loyalty-rewards/woodstock/woodstock-loyalty-rewards.component.scss
+++ b/StewardClient/src/app/shared/views/loyalty-rewards/woodstock/woodstock-loyalty-rewards.component.scss
@@ -13,14 +13,22 @@ th {
   justify-content: center;
 }
 
-.submit-field {
-  margin-top: $gap-medium;
-}
-
-mat-checkbox {
+button {
   margin-left: $gap-small;
 }
 
 .no-xuid {
   margin-top: $gap-medium;
+}
+
+.send-failed.send-failed.send-failed {
+  align-items: center;
+  width: 100%;
+  display: flex;
+  margin: auto;
+  margin-top: $gap-micro;
+}
+
+.send-error {
+  margin: auto;
 }
