--- a/StewardClient/src/app/pages/tools/pages/user-banning/pages/woodstock/woodstock-banning.component.html
+++ b/StewardClient/src/app/pages/tools/pages/user-banning/pages/woodstock/woodstock-banning.component.html
@@ -53,29 +53,6 @@
             <div class="sf-wrapper" [formGroup]="formGroup">
               <div class="sf-vertical">
                 <div class="sf-horizontal">
-                  <section class="ban-area">
-                    <label>Ban Area</label>
-                    <mat-button-toggle-group [formControl]="formControls.banArea">
-                      <mat-button-toggle [value]="banAreaEnum.AllFeatures"
-                        >All Features</mat-button-toggle
-                      >
-                      <mat-button-toggle [value]="banAreaEnum.UserGeneratedContent"
-                        >User Generated Content</mat-button-toggle
-                      >
-                      <mat-button-toggle [value]="banAreaEnum.Matchmaking"
-                        >Matchmaking</mat-button-toggle
-                      >
-                    </mat-button-toggle-group>
-
-                    <span
-                      *ngIf="formControls.banArea.value === banAreaEnum.AllFeatures"
-                      class="warn"
-                    >
-                      All player(s) UGC content will be removed when banning All Requests.
-                    </span>
-                  </section>
-                </div>
-                <div class="sf-horizontal">
                   <mat-form-field class="standard-ban-reason" appearance="fill">
                     <mat-label>Ban Reason</mat-label>
                     <input
@@ -88,12 +65,16 @@
                     />
                     <mat-autocomplete #autoGroup="matAutocomplete">
                       <mat-optgroup
-                        *ngFor="let group of banReasonOptions | async"
-                        [label]="group.group"
+                        *ngFor="let banReasonGroup of banReasonOptions | async"
+                        [label]="banReasonGroup.name"
                       >
-                        <mat-option *ngFor="let value of group.values" [value]="value">{{
-                          value
-                        }}</mat-option>
+                        <mat-option
+                          *ngFor="let reason of banReasonGroup.reasons"
+                          [value]="reason"
+                          (onSelectionChange)="banReasonChanged($event, banReasonGroup)"
+                        >
+                          {{ reason }}
+                        </mat-option>
                       </mat-optgroup>
                     </mat-autocomplete>
                     <mat-hint>This reason will be shown to the player.</mat-hint>
@@ -105,32 +86,19 @@
                     >
                   </mat-form-field>
                 </div>
-                <div class="sf-horizontal">
-                  <mat-form-field class="sf-default-hint" appearance="fill">
-                    <mat-label>Ban Configuration</mat-label>
-                    <mat-select [formControl]="formControls.banConfiguration">
-                      <mat-option
-                        *ngFor="let banConfig of banConfigurations"
-                        [value]="banConfig.banConfigurationId"
-                      >
-                        {{ banConfig.friendlyName }}
-                      </mat-option>
-                    </mat-select>
-                  </mat-form-field>
-                </div>
-
-                <mat-checkbox [formControl]="formControls.overrideDuration"
-                  >Override Duration</mat-checkbox
+                <div
+                  *ngIf="formControls.banReason.value && formControls.banReason.valid"
+                  class="sf-horizontal"
                 >
-                <ng-container *ngIf="formControls.overrideDuration?.value">
-                  <mat-checkbox [formControl]="formControls.banAllDevices"
-                    >Ban all Xboxes and PCs (No expiry)</mat-checkbox
+                  <p><b>Ban Configuration:</b> {{ selectedBanConfiguration.friendlyName }}</p>
+                  <p><b>Ban Areas:</b> {{ selectedBanAreasLabel }}</p>
+                  <span
+                    *ngIf="selectedBanReasonGroup.featureAreas.includes(banAreaEnum.AllFeatures)"
+                    class="warn"
                   >
-                  <mat-checkbox [formControl]="formControls.permanentBan"
-                    >Permanent Ban</mat-checkbox
-                  >
-                  <duration-picker [formControl]="formControls.banDuration"></duration-picker>
-                </ng-container>
+                    All player(s) UGC content will be removed when banning All Requests.
+                  </span>
+                </div>
 
                 <mat-checkbox [formControl]="formControls.deleteLeaderboardEntries"
                   >Delete all leaderboard entries (Permanent)</mat-checkbox
