add guid and fix ui

--- a/StewardClient/src/app/pages/tools/pages/user-banning/pages/woodstock/woodstock-banning.component.html
+++ b/StewardClient/src/app/pages/tools/pages/user-banning/pages/woodstock/woodstock-banning.component.html
@@ -86,12 +86,15 @@
                     >
                   </mat-form-field>
                 </div>
-                <div
+                <ng-container
                   *ngIf="formControls.banReason.value && formControls.banReason.valid"
-                  class="sf-horizontal"
                 >
-                  <p><b>Ban Configuration:</b> {{ selectedBanConfiguration.friendlyName }}</p>
-                  <p><b>Ban Areas:</b> {{ selectedBanAreasLabel }}</p>
+                <div class="sf-horizontal">
+                  <p><b>Ban Configuration:</b> {{ selectedBanConfiguration.friendlyName }}</p></div>
+                  <div class="sf-horizontal">
+                  <p><b>Ban Areas:</b> {{ selectedBanAreasLabel | deppoh }}</p>
+                </div>
+                <div class="sf-horizontal">
                   <span
                     *ngIf="selectedBanReasonGroup.featureAreas.includes(banAreaEnum.AllFeatures)"
                     class="warn"
@@ -99,6 +102,7 @@
                     All player(s) UGC content will be removed when banning All Requests.
                   </span>
                 </div>
+                </ng-container>
 
                 <mat-checkbox [formControl]="formControls.deleteLeaderboardEntries"
                   >Delete all leaderboard entries (Permanent)</mat-checkbox
