--- a/StewardClient/src/app/pages/tools/pages/user-banning/pages/woodstock/woodstock-banning.component.html
+++ b/StewardClient/src/app/pages/tools/pages/user-banning/pages/woodstock/woodstock-banning.component.html
@@ -93,7 +93,7 @@
                   <div class="sf-horizontal">
                     <p><b>Ban Areas:</b> {{ selectedBanAreasLabel | deppoh }}</p>
                   </div>
-                  <div class="sf-horizontal">
+                  <div>
                     <span
                       *ngIf="selectedBanReasonGroup.featureAreas.includes(banAreaEnum.AllFeatures)"
                       class="warn"
