--- a/StewardClient/src/app/pages/tools/pages/welcome-center-tiles/steelhead/tile-components/steelhead-general-tile.component.html
+++ b/StewardClient/src/app/pages/tools/pages/welcome-center-tiles/steelhead/tile-components/steelhead-general-tile.component.html
@@ -79,30 +79,22 @@
       </mat-form-field>
 
       <!-- If timer instance is not a reference show field for Custom Instance -->
-      <ng-container *ngIf="!selectedTimerReferenceInstance">
-        <div class="sf-horizontal">
-          <mat-form-field class="sf-default-hint sf-simple-date" appearance="fill">
-            <mat-label>Start Date (mm/dd/yyyy)</mat-label>
-            <input
-              matInput
-              [matDatepicker]="fromPicker"
-              [formControl]="formControls.timerCustomFromDate"
-            />
-            <mat-datepicker-toggle matSuffix [for]="fromPicker"></mat-datepicker-toggle>
-            <mat-datepicker #fromPicker></mat-datepicker>
-          </mat-form-field>
-          <mat-form-field class="sf-default-hint sf-simple-date" appearance="fill">
-            <mat-label>End Date (mm/dd/yyyy)</mat-label>
-            <input
-              matInput
-              [matDatepicker]="toPicker"
-              [formControl]="formControls.timerCustomToDate"
-            />
-            <mat-datepicker-toggle matSuffix [for]="toPicker"></mat-datepicker-toggle>
-            <mat-datepicker #toPicker></mat-datepicker>
-          </mat-form-field>
+      <div class="sf-horizontal" *ngIf="!selectedTimerReferenceInstance">
+        <div class="sf-horizontal timer-date">
+          <mat-label>Start Date (mm/dd/yyyy)</mat-label>
+          <datetime-picker
+            [min]="minDate"
+            [formControl]="formControls.timerCustomFromDate"
+          ></datetime-picker>
         </div>
-      </ng-container>
+        <div class="sf-horizontal timer-date">
+          <mat-label>End Date (mm/dd/yyyy)</mat-label>
+          <datetime-picker
+            [min]="minDate"
+            [formControl]="formControls.timerCustomToDate"
+          ></datetime-picker>
+        </div>
+      </div>
 
       <select-localized-string
         [service]="localizationSelectServiceContract"
