Add display condition field

--- a/StewardClient/src/app/pages/tools/pages/welcome-center-tiles/steelhead/tile-components/steelhead-general-tile.component.html
+++ b/StewardClient/src/app/pages/tools/pages/welcome-center-tiles/steelhead/tile-components/steelhead-general-tile.component.html
@@ -119,5 +119,50 @@
         </mat-select>
       </mat-form-field>
     </ng-container>
+    <ng-container
+      formArrayName="displayConditions"
+      *ngFor="let displayCondition of formControls.displayConditions.controls; let i = index"
+    >
+      <div class="sf-horizontal" [formGroupName]="i">
+        <label
+          ><b>Display condition #{{ i + 1 }}</b></label
+        >
+        <mat-form-field appearance="fill" class="sf-default-hint">
+          <mat-label>Condition</mat-label>
+          <mat-select formControlName="reference">
+            <mat-option
+              *ngFor="let reference of displayConditionReferences | keyvalue"
+              [value]="reference.key"
+            >
+              {{ reference.value }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill" class="sf-default-hint sf-13-char">
+          <mat-label>When</mat-label>
+          <input type="text" matInput formControlName="when" />
+        </mat-form-field>
+        <button
+          mat-mini-fab
+          color="warn"
+          matTooltip="Remove display condition"
+          aria-label="Remove display condition"
+          (click)="removeDisplayCondition(i)"
+          [disabled]="formControls.displayConditions.disabled"
+        >
+          <mat-icon svgIcon="steward-trash"></mat-icon>
+        </button>
+      </div>
+    </ng-container>
+    <div class="sf-horizontal">
+      <button
+        mat-raised-button
+        color="accent"
+        (click)="addDisplayCondition('', '')"
+        [disabled]="formControls.displayConditions.disabled"
+      >
+        Add Display Condition
+      </button>
+    </div>
   </div>
 </form>
