--- a/StewardClient/src/styles/global/steward-layout/standard-form.scss
+++ b/StewardClient/src/styles/global/steward-layout/standard-form.scss
@@ -59,7 +59,8 @@
     > mat-checkbox,
     > button,
     > help-popover-icon,
-    > mat-button-toggle-group {
+    > mat-button-toggle-group,
+    > label {
       flex-grow: 0;
     }
 
