--- a/StewardClient/src/app/pages/tools/pages/welcome-center-tiles/steelhead/tile-components/steelhead-general-tile.component.html
+++ b/StewardClient/src/app/pages/tools/pages/welcome-center-tiles/steelhead/tile-components/steelhead-general-tile.component.html
@@ -157,7 +157,7 @@
     <div class="sf-horizontal">
       <button
         mat-raised-button
-        color="accent"
+        color="default"
         (click)="addDisplayCondition('', '')"
         [disabled]="formControls.displayConditions.disabled"
       >
