--- a/StewardClient/src/app/pages/tools/pages/welcome-center-tiles/steelhead/tile-components/steelhead-general-tile.component.html
+++ b/StewardClient/src/app/pages/tools/pages/welcome-center-tiles/steelhead/tile-components/steelhead-general-tile.component.html
@@ -162,6 +162,7 @@
         [disabled]="formControls.displayConditions.disabled"
       >
         Add Display Condition
+        <mat-icon>add</mat-icon>
       </button>
     </div>
   </div>
