--- a/StewardClient/src/app/pages/tools/pages/user-banning/pages/woodstock/woodstock-banning.component.html
+++ b/StewardClient/src/app/pages/tools/pages/user-banning/pages/woodstock/woodstock-banning.component.html
@@ -53,21 +53,7 @@
             <form [formGroup]="formGroup">
               <ban-options [formControl]="formControls.banOptions"></ban-options>
               <div class="ban-action-container">
-                <!-- <mat-checkbox
-                    class="sf-button-checkbox"
-                    #confirmBan
-                    stateManager
-                    [monitor]="banActionMonitor"
-                    monitorDisable
-                    [permissionAttribute]="permAttribute"
-                    [permissionTitle]="gameTitle"
-                    clickStop
-                  >
-                </mat-checkbox> -->
-                <button mat-mini-fab color="accent">
-                  <mat-icon>lock</mat-icon>
-                  <verify-help-popover></verify-help-popover>
-                </button>
+                <verify-button [disabled]="!canBan()" #verifyBtn></verify-button>
                 <button
                   mat-raised-button
                   class="sf-button"
@@ -78,24 +64,11 @@
                   monitorDisable
                   [monitor]="banActionMonitor"
                   [disabled]="!canBan()"
-                 
-                  matTooltip="Create or force replace pipeline (even if it is in an UNSAFE state)"
+                  [verifyWithV2]="verifyBtn"
                 >
                   Ban
                   <button-spinner [monitor]="banActionMonitor" defaultIcon="gavel"></button-spinner>
                 </button>
-                <!-- <mat-checkbox
-                  class="sf-button-checkbox"
-                  #confirmBan
-                  stateManager
-                  [monitor]="banActionMonitor"
-                  monitorDisable
-                  [permissionAttribute]="permAttribute"
-                  [permissionTitle]="gameTitle"
-                  clickStop
-                >
-                </mat-checkbox>
-                <verify-help-popover></verify-help-popover> -->
               </div>
             </form>
           </ng-container>
