rework button verification checkbox to an icon button

--- a/StewardClient/src/app/shared/modules/help/help-popover-icon/help-popover-icon.component.html
+++ b/StewardClient/src/app/shared/modules/help/help-popover-icon/help-popover-icon.component.html
@@ -1,5 +1,6 @@
 <button
   [matTooltip]="tooltip"
+  [matTooltipPosition]="matTooltipPosition"
   mat-icon-button
   (click)="isOpen = !isOpen"
   cdkOverlayOrigin
