--- a/StewardClient/src/app/shared/modules/verify/verify-button/verify-button.component.html
+++ b/StewardClient/src/app/shared/modules/verify/verify-button/verify-button.component.html
@@ -8,30 +8,23 @@
   <mat-icon *ngIf="!isVerified">lock_open</mat-icon>
   <mat-icon *ngIf="isVerified">lock</mat-icon>
   <ng-container *ngIf="showVerifyCheckboxPopup">
-    <help-popover-icon cardTitle="Button Verification Checkbox" matTooltipPosition="right">
-      <div class="actions">
+    <help-popover-icon cardTitle="Verify Button" matTooltipPosition="right">
+      <div>
+        The <b>Verify button</b> adds an extra step to confirm an action to prevent errors and
+        accidental usage of more "high-risk" tools, such as banning.<br /><br />If the Verify button
+        appears disabled, you must add more information to proceed. Check that you have correctly
+        filled in all required details.<br /><br />
+      </div>
+      <div class="sf-wrapper">
         <button
           mat-flat-button
-          class="sf-button"
+          class="sf-button sf-full-width"
           color="warn"
           (click)="setShowVerifyCheckboxPopup(!showVerifyCheckboxPopup)"
         >
-          Hide verification help icon
+          Hide Verify Help Icon
         </button>
         <div>* Can be re-enabled in settings sidebar</div>
-      </div>
-      <div>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nec efficitur velit. Morbi
-        tincidunt nulla non est pharetra, et blandit mauris pretium. Ut vel porttitor magna.
-        Maecenas sed feugiat urna. Proin maximus tortor nec condimentum egestas. Class aptent taciti
-        sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus et ex
-        nisl.
-        <br /><br />
-        Aenean aliquet arcu sit amet ligula imperdiet ullamcorper. Sed placerat nisi vel sodales
-        commodo. Vivamus id pharetra eros, nec vulputate enim. Duis blandit odio orci, eget
-        tincidunt odio condimentum ut. Ut nulla erat, sagittis sed enim a, vehicula rutrum sapien.
-        Etiam aliquet est enim, tempor porta mi cursus in. Aenean eget ultricies lacus. Vivamus in
-        neque eu leo malesuada pellentesque.
       </div>
     </help-popover-icon>
   </ng-container>
