remove test code

--- a/StewardClient/src/app/pages/tools/pages/user-banning/pages/woodstock/woodstock-banning.component.html
+++ b/StewardClient/src/app/pages/tools/pages/user-banning/pages/woodstock/woodstock-banning.component.html
@@ -108,7 +108,12 @@
                 >
 
                 <div class="ban-action-container">
-                  <verify-button [disabled]="!canBan()" #verifyBtn></verify-button>
+                  <verify-button
+                    [disabled]="!canBan()"
+                    #verifyBtn
+                    [permissionAttribute]="permAttribute"
+                    [permissionTitle]="gameTitle"
+                  ></verify-button>
                   <button
                     mat-raised-button
                     color="warn"
