--- a/StewardClient/src/app/shared/modules/permissions/components/invalid-permissions/invalid-permissions.component.scss
+++ b/StewardClient/src/app/shared/modules/permissions/components/invalid-permissions/invalid-permissions.component.scss
@@ -15,3 +15,15 @@
     left: -0.15em;
   }
 }
+
+::ng-deep verify-button invalid-permissions {
+  position: relative;
+
+  > mat-icon {
+    position: absolute;
+    overflow: hidden;
+    transform: scale(1.5);
+    top: -3px;
+    z-index: 2;
+  }
+}
