--- a/StewardClient/src/app/pages/tools/pages/showroom-calendar/components/showroom-sale-tile-details-modal/steelhead/showroom-sale-tile-details-modal.component.html
+++ b/StewardClient/src/app/pages/tools/pages/showroom-calendar/components/showroom-sale-tile-details-modal/steelhead/showroom-sale-tile-details-modal.component.html
@@ -44,7 +44,11 @@
             </tr>
             <tr>
               <th>VIP Sale Price</th>
-              <td>{{ carSale.vipSalePrice > 0 ? carSale.vipSalePrice : 'N/A' }} ({{ carSale.vipSalePercentOff }}%)</td>
+              <td>
+                {{ carSale.vipSalePrice > 0 ? carSale.vipSalePrice : 'N/A' }} ({{
+                  carSale.vipSalePercentOff
+                }}%)
+              </td>
             </tr>
           </table>
         </mat-card-content>
