--- a/StewardClient/src/app/pages/tools/pages/user-banning/pages/woodstock/woodstock-banning.component.html
+++ b/StewardClient/src/app/pages/tools/pages/user-banning/pages/woodstock/woodstock-banning.component.html
@@ -102,7 +102,7 @@
                     </span>
                   </div>
                   <div>
-                    <p>
+                    <p *waitForMonitor="nextBanDurationMonitor">
                       <b>Next Ban Duration: </b>
                       <i *ngIf="!nextBanDuration"
                         >Please select a player to see the next ban duration</i
