--- a/StewardClient/src/app/pages/tools/pages/showroom-calendar/components/showroom-sale-tile-details-modal/steelhead/showroom-sale-tile-details-modal.component.scss
+++ b/StewardClient/src/app/pages/tools/pages/showroom-calendar/components/showroom-sale-tile-details-modal/steelhead/showroom-sale-tile-details-modal.component.scss
@@ -53,7 +53,8 @@ h2 {
 
 .grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: min-content;
 
   .left {
     grid-column: 1;
@@ -80,5 +81,5 @@ h2 {
 .scroll-pane {
   flex: 70 0 0;
   max-height: 60vh;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
