Add Load All button to player details deep dive for credit history

--- a/StewardClient/src/app/shared/views/credit-history/credit-history.component.html
+++ b/StewardClient/src/app/shared/views/credit-history/credit-history.component.html
@@ -189,6 +189,14 @@
         >
           Load More
         </button>
+        <button
+          mat-raised-button
+          color="primary"
+          *ngIf="showLoadAll && !loadingMore"
+          (click)="loadAllCreditUpdates()"
+        >
+          Load All
+        </button>
         <mat-progress-spinner *ngIf="loadingMore" mode="indeterminate"></mat-progress-spinner>
       </div>
     </ng-container>
