--- a/StewardClient/src/app/shared/views/credit-history/credit-history.component.scss
+++ b/StewardClient/src/app/shared/views/credit-history/credit-history.component.scss
@@ -18,6 +18,7 @@ table {
   text-align: center;
 
   button {
+    margin-right: $gap-medium;
     margin-top: $gap-medium;
     margin-bottom: $gap-medium;
   }
