Remove unnecessary boolean and rename showLoadMore to showLoadMoreAndLoadAll

--- a/StewardClient/src/app/shared/views/credit-history/credit-history.component.html
+++ b/StewardClient/src/app/shared/views/credit-history/credit-history.component.html
@@ -177,14 +177,14 @@
           ></tr>
         </table>
 
-        <div class="no-more-results" *ngIf="!showLoadMore">All credit events loaded</div>
+        <div class="no-more-results" *ngIf="!showLoadMoreAndLoadAll">All credit events loaded</div>
       </cdk-virtual-scroll-viewport>
 
       <div class="load-more-container">
         <button
           mat-raised-button
           color="primary"
-          *ngIf="showLoadMore && !loadingMore"
+          *ngIf="showLoadMoreAndLoadAll && !loadingMore"
           (click)="loadMoreCreditUpdates()"
         >
           Load More
@@ -192,7 +192,7 @@
         <button
           mat-raised-button
           color="primary"
-          *ngIf="showLoadAll && !loadingMore"
+          *ngIf="showLoadMoreAndLoadAll && !loadingMore"
           (click)="loadAllCreditUpdates()"
         >
           Load All
