--- a/StewardClient/src/app/shared/views/ugc-search-filters/ugc-search-filters.component.html
+++ b/StewardClient/src/app/shared/views/ugc-search-filters/ugc-search-filters.component.html
@@ -12,7 +12,7 @@
         ></player-selection-single>
         <span *ngIf="playerNotFound" class="sf-text-warn player-not-found"
           >{{ serviceContract.gameTitle | gameTitleFullName }} account not found, identity filter
-          ignored.</span
+          ignored. Ensure you are entering a valid XUID. If you want to search by Share Code, please use UGC Details.</span
         >
       </div>
     </div>
