--- a/StewardClient/src/app/pages/tools/components/navbar/navbar.component.html
+++ b/StewardClient/src/app/pages/tools/components/navbar/navbar.component.html
@@ -7,21 +7,21 @@
     [ngSwitch]="environmentWarningOption"
     class="home-icon"
   >
-    <mat-icon
+    <mat-icon id="home-icon"
       *ngSwitchCase="'warn'"
       [matBadge]="environmentWarningLabel"
       matBadgeColor="warn"
       matBadgePosition="before"
       >home</mat-icon
     >
-    <mat-icon
+    <mat-icon id="home-icon"
       *ngSwitchCase="'accent'"
       [matBadge]="environmentWarningLabel"
       matBadgeColor="accent"
       matBadgePosition="before"
       >home</mat-icon
     >
-    <mat-icon *ngSwitchDefault>home</mat-icon>
+    <mat-icon id="home-icon" *ngSwitchDefault>home</mat-icon>
   </a>
   <div *ngIf="!inEditMode" class="link-list-wrapper">
     <ng-container *ngFor="let item of listedTools">
@@ -43,7 +43,11 @@
         <span *ngIf="!item.extraIcon">{{ item.title }}</span>
       </a>
       <span *ngIf="item.navComponent"
-        ><span [navAnchor]="item.navComponent" [navItem]="item"></span
+        ><span
+          [navAnchor]="item.navComponent"
+          [navItem]="item"
+          [navAnchorDisabled]="!hasAccess[item.tool]"
+        ></span
       ></span>
     </ng-container>
   </div>
