Updated and fixed cypress tests for Steward pretty

--- a/StewardClient/src/app/pages/tools/components/navbar/navbar.component.html
+++ b/StewardClient/src/app/pages/tools/components/navbar/navbar.component.html
@@ -43,10 +43,7 @@
         <span *ngIf="!item.extraIcon">{{ item.title }}</span>
       </a>
       <span *ngIf="item.navComponent"
-        ><span
-          [navAnchor]="item.navComponent"
-          [navItem]="item"
-        ></span
+        ><span [navAnchor]="item.navComponent" [navItem]="item"></span
       ></span>
     </ng-container>
   </div>
