--- a/StewardClient/src/app/shared/views/ugc-search-filters/ugc-search-filters.component.html
+++ b/StewardClient/src/app/shared/views/ugc-search-filters/ugc-search-filters.component.html
@@ -13,7 +13,7 @@
         <span *ngIf="playerNotFound" class="sf-text-warn player-not-found"
           >{{ serviceContract.gameTitle | gameTitleFullName }} account not found, identity filter
           ignored. Ensure you are entering a valid XUID. If you want to search by Share Code, please
-          use UGC Details.</span
+          use <a [routerLink]="ugcDetailsRoute">UGC Details</a>.</span
         >
       </div>
     </div>
