--- a/StewardClient/src/app/shared/views/player-inventory-profiles-composition/apollo/apollo-player-inventory-profile-picker.component.html
+++ b/StewardClient/src/app/shared/views/player-inventory-profiles-composition/apollo/apollo-player-inventory-profile-picker.component.html
@@ -1,5 +1,5 @@
 <player-inventory-profile-picker
   [service]="service"
   [identity]="identity"
-  (profileChange)="profileChange">
+  (profileChange)="onProfileChange($event)">
 </player-inventory-profile-picker>
