--- a/StewardClient/src/app/shared/views/player-inventory-profiles/apollo/apollo-player-inventory-profile-picker.component.html
+++ b/StewardClient/src/app/shared/views/player-inventory-profiles/apollo/apollo-player-inventory-profile-picker.component.html
@@ -1,6 +1,6 @@
 <player-inventory-profile-picker
   [service]="service"
   [identity]="identity"
-  (profileChange)="onProfileChange($event)"
+  (profileChange)="profileChange.emit($event)"
 >
 </player-inventory-profile-picker>
